# campari-valuation

./: .gitattributes  .gitignore  Campari_DCF_Model.xlsx  README.md  RESEARCH_NOTE.md  pyproject.toml
.github/workflows/: ci.yml
src/campari_valuation/: beta.py  cli.py  data.py  multiples.py  validate.py
tests/: test_beta.py  test_data.py  test_integration.py  test_multiples.py
