[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "campari-valuation"
version = "0.1.0"
description = "A DCF and trading-comparables equity valuation of Davide Campari-Milano N.V., with a live-data Python layer that independently cross-checks the Excel model's market-observable assumptions (peer multiples, beta)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Maria Sfondrini", email = "276984303+sfondrinimaria02-del@users.noreply.github.com" }]
keywords = ["equity-research", "valuation", "dcf", "trading-comparables", "quantitative-finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "yfinance>=0.2.54,<2",
    "pandas>=2.2,<4",
    "numpy>=1.26,<3",
    "matplotlib>=3.8,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.11,<1",
]

[project.scripts]
campari-valuation = "campari_valuation.cli:main"

[project.urls]
Repository = "https://github.com/sfondrinimaria02-del/campari-valuation"

[tool.hatch.build.targets.wheel]
packages = ["src/campari_valuation"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not integration'"
markers = [
    "integration: hits the real Yahoo Finance API; run explicitly with `pytest -m integration`",
]
